--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             try {
                 // This calls the backend API that talks to SQL
-                const response = await fetch('/api', {
+                const response = await fetch('/api/addUser', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ name, email })
@@ -112,4 +112,5 @@
     </script>
 </body>
 </html>
+
 
