--- a/index.html
+++ b/index.html
@@ -109,8 +109,11 @@
                 status.innerText = "❌ Connection Failed (Is the backend ready?)";
             }
         }
-    </script>
+    </script >
+    <script src="app.js"></script>
+    
 </body>
 </html>
+
 
 
