--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <input type="text" id="userName" placeholder="Full Name">
         <input type="email" id="userEmail" placeholder="Email Address">
         <button onclick="sendData()">Save to Database</button>
+        <button id="get-aqi-btn">Check Air Quality</button>
         <p id="status"></p>
     </div>
 
@@ -114,6 +115,7 @@
     
 </body>
 </html>
+
 
 
 
