--- a/index.html
+++ b/index.html
@@ -55,6 +55,23 @@
             <button class="btn-link" onclick="quickSearch('New York City', 'New York', 'USA')">🇺🇸 New York</button>
             <button class="btn-link" onclick="quickSearch('Tokyo', 'Tokyo', 'Japan')">🇯🇵 Tokyo</button>
         </div>
+       
+    <div id="result"></div>
+    <a id="whatsappBtn" class="btn-share" target="_blank">📲 Share Medical Alert on WhatsApp</a>
+
+    <div class="chart-container">
+        <canvas id="aqiChart"></canvas>
+    </div>
+
+    <div id="news-section" style="margin-top: 40px; border-top: 1px solid #e2e8f0; padding-top: 20px;">
+        <h4 style="color: #2d3748; margin-bottom: 15px; display: flex; align-items: center; gap: 8px;">
+            📰 Latest Health & Environment News
+        </h4>
+        <div id="news-feed" style="max-height: 300px; overflow-y: auto; padding-right: 5px;">
+            <p style="color: #718096; font-size: 14px; text-align: center;">Fetching global headlines...</p>
+        </div>
+    </div>
+</div>
         
         <form id="signup-form" class="search-group">
             <input type="text" id="cityInput" placeholder="City (e.g. Paris)" required>
@@ -76,3 +93,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
