--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BreatheWell Pro | Global Health Intelligence</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Segoe UI', sans-serif; background-color: #f0f4f8; color: #1a202c; }
@@ -61,9 +62,13 @@
 
     <div id="emergency-zone"><button class="btn-emergency" onclick="triggerEmergencyAlert()">🆘 EMERGENCY PROTOCOL REQUIRED</button></div>
     <a id="whatsappBtn" class="share-wa" target="_blank">📲 Share Alert on WhatsApp</a>
+        <button id="downloadPdf" class="btn-main" style="background: #4a5568; margin-top: 10px; display: none;">
+    📄 Download Medical PDF Report
+</button>
     <div class="chart-box"><canvas id="aqiChart"></canvas></div>
 </div>
     <script src="app.js"></script>
 </body>
 </html>
+
 
