--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="BreatheWell Pro | Your Air Health Advisor">
+<meta property="og:description" content="Check real-time air quality, track your medical symptoms, and download hazardous exposure reports.">
+<meta property="og:image" content="https://images.unsplash.com/photo-1580216643062-cf460548a66a?auto=format&fit=crop&w=1200&h=630"> <meta property="og:url" content="https://runakshivijaykar86-netizen.github.io/BreatheWell-MVP./">
+<meta property="og:type" content="website">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="BreatheWell Pro">
+<meta name="twitter:description" content="Personalized medical advice based on your local air quality.">
+<meta name="twitter:image" content="https://images.unsplash.com/photo-1580216643062-cf460548a66a?auto=format&fit=crop&w=1200&h=630">
     <title>BreatheWell Pro | Global Health Intelligence</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -70,5 +79,6 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
