--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>BreatheWell Pro | Global Health Intelligence</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <link rel="manifest" href="manifest.json">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Segoe UI', sans-serif; background-color: #f0f4f8; color: #1a202c; }
@@ -79,6 +80,7 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
