--- a/index.html
+++ b/index.html
@@ -12,114 +12,127 @@
     
     <style>
         :root {
-            --primary: #0078d4;
-            --dark: #1e293b;
-            --light: #f8fafc;
-            --accent: #38bdf8;
-        }
+    --bg-dark: #0f172a;      /* Deep Midnight */
+    --card-bg: #1e293b;    /* Slate Blue */
+    --text-main: #f8fafc;  /* Soft White */
+    --primary: #38bdf8;    /* Neon Cyan */
+    --accent: #818cf8;     /* Indigo */
+    --border: rgba(255, 255, 255, 0.1);
+}
 
-        body { 
-            font-family: 'Inter', -apple-system, sans-serif; 
-            background: linear-gradient(135deg, #f1f5f9 0%, #e2e8f0 100%);
-            color: var(--dark);
-            min-height: 100vh;
-        }
+body { 
+    font-family: 'Inter', sans-serif; 
+    background-color: var(--bg-dark);
+    color: var(--text-main);
+    margin: 0;
+    line-height: 1.6;
+}
 
-        .navbar { 
-            background: white; 
-            padding: 1rem 10%; 
-            display: flex; 
-            justify-content: space-between; 
-            align-items: center;
-            box-shadow: 0 2px 15px rgba(0,0,0,0.05);
-        }
+.navbar { 
+    background: rgba(15, 23, 42, 0.8);
+    backdrop-filter: blur(10px);
+    padding: 1.5rem 10%; 
+    border-bottom: 1px solid var(--border);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
 
-        .logo { font-size: 24px; font-weight: 800; color: var(--primary); letter-spacing: -1px; }
+.logo { 
+    font-size: 24px; 
+    font-weight: 800; 
+    color: var(--primary); 
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
 
-        .app-grid { 
-            max-width: 1200px; 
-            margin: 30px auto; 
-            display: grid; 
-            grid-template-columns: 1fr 2fr; 
-            gap: 25px; 
-            padding: 0 20px;
-        }
+.app-grid { 
+    max-width: 1200px; 
+    margin: 40px auto; 
+    display: grid; 
+    grid-template-columns: 350px 1fr; 
+    gap: 30px; 
+    padding: 0 20px;
+}
 
-        /* Glassmorphism Cards */
-        .card { 
-            background: rgba(255, 255, 255, 0.9); 
-            backdrop-filter: blur(10px);
-            padding: 25px; 
-            border-radius: 20px; 
-            box-shadow: 0 10px 30px rgba(0,0,0,0.04);
-            border: 1px solid rgba(255,255,255,0.7);
-        }
+/* Sophisticated Dark Cards */
+.card { 
+    background: var(--card-bg); 
+    padding: 30px; 
+    border-radius: 24px; 
+    box-shadow: 0 20px 50px rgba(0,0,0,0.3);
+    border: 1px solid var(--border);
+}
 
-        .search-section { display: flex; flex-direction: column; gap: 15px; }
-        input { 
-            padding: 14px; 
-            border: 2px solid #e2e8f0; 
-            border-radius: 12px; 
-            font-size: 15px; 
-            transition: 0.3s;
-        }
-        input:focus { border-color: var(--primary); outline: none; box-shadow: 0 0 0 4px rgba(0,120,212,0.1); }
+input { 
+    background: #334155;
+    border: 1px solid var(--border);
+    color: white;
+    padding: 14px; 
+    border-radius: 12px; 
+    width: 100%;
+    margin-bottom: 12px;
+    font-size: 15px;
+}
 
-        .btn { 
-            padding: 14px; 
-            border-radius: 12px; 
-            border: none; 
-            font-weight: 700; 
-            cursor: pointer; 
-            transition: 0.3s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-        }
-        .btn-primary { background: var(--primary); color: white; }
-        .btn-primary:hover { transform: translateY(-2px); box-shadow: 0 5px 15px rgba(0,120,212,0.3); }
-        
-        .btn-gps { background: var(--dark); color: white; width: 100%; margin-bottom: 20px; }
+input:focus {
+    outline: none;
+    border-color: var(--primary);
+    box-shadow: 0 0 0 4px rgba(56, 189, 248, 0.2);
+}
 
-        /* Medical Display */
-        .aqi-badge { 
-            font-size: 48px; font-weight: 900; margin: 10px 0;
-            background: linear-gradient(45deg, var(--dark), var(--primary));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
+.btn { 
+    padding: 16px; 
+    border-radius: 12px; 
+    border: none; 
+    font-weight: 700; 
+    cursor: pointer; 
+    transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
 
-        .status-pill {
-            display: inline-block;
-            padding: 6px 16px;
-            border-radius: 50px;
-            font-size: 14px;
-            font-weight: 700;
-            text-transform: uppercase;
-        }
+.btn-primary { 
+    background: linear-gradient(135deg, var(--primary), var(--accent)); 
+    color: white; 
+}
 
-        .chart-map-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-            margin-top: 20px;
-        }
+.btn-primary:hover { 
+    transform: translateY(-3px); 
+    box-shadow: 0 10px 20px rgba(56, 189, 248, 0.4); 
+}
 
-        #map { height: 250px; border-radius: 15px; z-index: 1; }
+.aqi-badge { 
+    font-size: 64px; 
+    font-weight: 900; 
+    margin: 20px 0;
+    background: linear-gradient(to right, #fff, var(--primary));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 
-        @media (max-width: 900px) {
-            .app-grid, .chart-map-container { grid-template-columns: 1fr; }
-        }
+.status-pill {
+    padding: 8px 20px;
+    border-radius: 50px;
+    font-size: 14px;
+    font-weight: 800;
+    background: rgba(255,255,255,0.05);
+}
 
-        /* Emergency Pulse */
-        #emergency-zone { display: none; }
-        .emergency-banner {
-            background: #fee2e2; border: 2px solid #ef4444; color: #b91c1c;
-            padding: 15px; border-radius: 12px; font-weight: 800; text-align: center;
-            animation: pulse 2s infinite; cursor: pointer;
-        }
-        @keyframes pulse { 0% { opacity: 1; } 50% { opacity: 0.7; } 100% { opacity: 1; } }
+/* Map & Chart Dark Mode Styling */
+#map { 
+    height: 300px; 
+    border-radius: 20px; 
+    filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%); 
+}
+
+#aqiChart {
+    filter: drop-shadow(0 0 10px rgba(56, 189, 248, 0.2));
+}
+
+@media (max-width: 1000px) {
+    .app-grid { grid-template-columns: 1fr; }
+}
     </style>
 </head>
 <body>
@@ -203,3 +216,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
