--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                 <div id="placeholder" class="card" style="text-align: center; padding: 80px 20px; opacity: 0.5;">
                     🔍 Waiting for Location Input...
                 </div>
+                <div id="history-card" class="card" style="margin-top: 20px; display: none;">
+    <h4 style="margin-bottom: 10px; color: var(--primary); font-size: 12px; letter-spacing: 1px;">💾 RECENT SEARCH HISTORY</h4>
+    <div id="history-list" style="display: flex; flex-direction: column; gap: 8px;"></div>
+    <button onclick="clearHistory()" style="background:none; border:none; color:#ef4444; font-size:10px; cursor:pointer; margin-top:10px; text-decoration:underline;">Clear All History</button>
+</div>
 
                 <div id="main-content" style="display: none;">
                     <div class="card">
@@ -101,6 +106,8 @@
             </div>
         </div>
     </div>
+    
     <script src="app.js"></script>
 </body>
 </html>
+
