--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#0f172a">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2877/2877696.png">
     <title>BreatheWell Pro | Health Intelligence</title>
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -110,3 +115,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
