--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>BreatheWell Pro | Clinical AI & Green Routing</title>
+    <title>BreatheWell Pro | Imagine Cup 2026</title>
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -41,7 +40,7 @@
                     <input type="text" id="city" placeholder="City" required>
                     <input type="text" id="state" placeholder="State" required>
                     <input type="text" id="country" placeholder="Country" required>
-                    <button type="submit" class="btn btn-primary">ANALYZE REGION</button>
+                    <button type="submit" class="btn btn-primary" id="search-btn">ANALYZE REGION</button>
                 </form>
             </div>
 
@@ -73,4 +72,12 @@
                         <button id="downloadPdf" class="btn" style="background: #475569; width: auto; padding: 10px 20px; color: white;">📄 CLINICAL REPORT</button>
                     </div>
                     <span class="med-label">🚨 BIOLOGICAL IMPACT (ALVEOLAR BREACH)</span>
-                    <p id="display-now" style="
+                    <p id="display-now" style="font-size: 14px; margin-bottom: 20px; color: #cbd5e1;"></p>
+                </div>
+                <div id="map"></div>
+            </div>
+        </div>
+    </div>
+    <script src="app.js"></script>
+</body>
+</html>
