--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
             </div>
         </div>
     </div>
-    <script src="app.js"></script>
+   
+   <script src="app.js?v=1.1"></script>
 </body>
 </html>
+
